samples/_failures_safe/1761130490_548880_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6060942.c: In function ‘main’:
./samples/SAFE/__tmp_b6060942.c:206:5: error: expected declaration or statement at end of input
  206 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
